<resources>
    <string name="app_name">DevCloud</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_welcome">Welcome</string>

    <!-- Menu Items -->
    <string name="menu_add_salesforce_account">Add a Salesforce Account</string>
    <string name="menu_view_salesforce_accounts">Connected Accounts</string>
    <string name="menu_about">About</string>

    <!-- Account Menu Items -->
    <string name="menu_acc_apex">Anonymous Apex</string>
    <string name="menu_acc_soql">Run SOQL Query</string>
    <string name="menu_acc_limits">Limits</string>

    <!-- About Fragment -->
    <string name="about_text">DevCloud brings the Salesforce Dev Console\nto your Android Phone.\n\nEnjoy features such as\n\n- running anonymous code\n- reading logs\n- performing SOQL queries\n- checking org limits.</string>
    <string name="about_text_html"><![CDATA[<p><center>DevCloud brings the Salesforce Dev Console<br>to your Android Phone.<br><br>Enjoy features such as</center></p><p><ul><li>Running Anonymous Code</li><li>Reading Logs</li><li>Performing SOQL queries</li><li>Checking Org Limits.</li></ul></p><p><center><a href="https://github.com/musevarg/DevCloud">https://github.com/musevarg/DevCloud</a></center></p>]]></string>
    <string name="about_footer">© 2023 musevarg</string>

    <!-- Connexion Dialog -->
    <string name="dialog_header">Add Account</string>
    <string name="dialog_account_name_input_label">Name:</string>
    <string name="dialog_account_name_hint">Any name you like</string>
    <string name="dialog_client_id_input_label">Client ID:</string>
    <string name="dialog_client_id_hint">Client ID from your Connected App</string>
    <string name="dialog_org_instance_label">Org Instance:</string>
    <string name="dialog_connect_with_browser_button">Connect via browser</string>
    <string name="dialog_api_oauth_button">Connect by API</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_name_field_empty">You must enter an account name</string>
    <string name="dialog_client_id_field_empty">You must enter a valid client id</string>
    <string-array name="dialog_org_instance_array">
        <item>Sandbox</item>
        <item>Production</item>
    </string-array>
    <string name="dialog_warning_message">If you have already authorized a session,\nyou may need to clear the Salesforce cookies\nfrom your default browser to add a new account</string>

    <!-- Connected Account Drawer -->
    <string name="menu_dev_console">Run Apex</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_soql">Run SOQL Query</string>
    <string name="menu_limits">Org Limits</string>
    <string name="menu_back">Back to Home</string>

    <!-- Dev Console -->
    <string name="dev_input_hint">Type APEX here</string>
    <string name="dev_button_send">Run APEX</string>
    <string name="dev_run_apex_toast">Running APEX…</string>
    <string name="dev_dialog_error_title">Error</string>

</resources>